--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "devt": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "check-outdated-packages": "bunx npm-check-updates -u"
   },
   "dependencies": {
     "@chakra-ui/react": "^3.19.2",
     "@emotion/react": "^11.14.0",
-    "next": "^15.4.0-canary.61",
+    "next": "^15.4.0-canary.67",
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
@@ -22,9 +23,9 @@
   },
   "devDependencies": {
     "typescript": "^5.8.3",
-    "@types/node": "^20.17.57",
+    "@types/node": "^22.15.29",
     "@types/react": "^19.1.6",
-    "@types/react-dom": "^19.1.5",
+    "@types/react-dom": "^19.1.6",
     "eslint": "^9.28.0",
     "eslint-config-next": "15.3.3",
     "@eslint/eslintrc": "^3.3.1"
