--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@chakra-ui/react": "^3.20.0",
     "@emotion/react": "^11.14.0",
-    "next": "^15.4.0-canary.67",
+    "next": "15.4.0-canary.72",
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
