--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "devt": "next dev --turbopack",
+    "inspect": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -12,12 +13,16 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^3.20.0",
+    "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
-    "next": "15.4.0-canary.72",
+    "@emotion/server": "^11.11.0",
+    "babel-plugin-react-compiler": "^19.1.0-rc.2",
+    "next": "15.3.3",
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-error-boundary": "^6.0.0",
     "react-icons": "^5.5.0",
     "use-mask-input": "^3.4.2"
   },
