--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+.continue/prompts/new-prompt.yaml
+.continue/config.json
+.continue/mcpServers/new-mcpServer.yaml
