--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,8 @@ next-env.d.ts
 .continue/prompts/new-prompt.yaml
 .continue/config.json
 .continue/mcpServers/new-mcpServer.yaml
+*.txt
+*.md
+.VSCodeCounter/.VSCodeCounterCountRealtime
+*.csv
+.VSCodeCounter/*/results.json
