--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
     "babel-plugin-react-compiler": "^19.1.0-rc.2",
-    "next": "15.3.3",
+    "next": "15.4.0-canary.83",
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
     "react-icons": "^5.5.0",
+    "swiper": "^11.2.8",
     "use-mask-input": "^3.4.2"
   },
   "devDependencies": {
